--- a/nestjs-introduction/tsconfig.json
+++ b/nestjs-introduction/tsconfig.json
@@ -17,5 +17,8 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "noFallthroughCasesInSwitch": false
+  },
+  "rules": {
+    "@typescript-eslint/no-unsafe-assignment": "off"
   }
 }
