--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"dependencies": {
-		"@nestjs/jwt": "^11.0.0"
+		"@nestjs/config": "^4.0.2",
+		"@nestjs/jwt": "^11.0.0",
+		"google-auth-library": "^10.1.0"
 	}
 }
