--- a/nestjs-introduction/package.json
+++ b/nestjs-introduction/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "google-auth-library": "^10.2.0",
     "joi": "^17.13.3",
     "nest": "^0.1.6",
     "pg": "^8.15.6",
