--- a/nestjs-introduction/package.json
+++ b/nestjs-introduction/package.json
@@ -30,17 +30,21 @@
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^2.0.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "express": "^5.1.0",
     "google-auth-library": "^10.2.0",
     "joi": "^17.13.3",
+    "multer": "^2.0.2",
     "nest": "^0.1.6",
     "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "typeorm": "^0.3.23"
+    "typeorm": "^0.3.23",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
